--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<h1>index page</h1>
-<p>selamat datang di halaman index.<p1>
-  
-<a href ="profile.html">profile<a>
-  <a href ="galeri.html">galeri<a>
-    <a href ="contact.html">contact<a>
+<h1>profile page</h1>
+
+<p>ini adalah profile</p>
+
+<a href="profile.html"> kembali ke profil</a>
